# dromos-oauth-gateway/gen/go/api/proto/oha/v1/oha.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.36.9
+// 	protoc-gen-go v1.36.11
 // 	protoc        (unknown)
 // source: api/proto/oha/v1/oha.proto
 
@@ -359,6 +359,94 @@ func (x *GetTokenResponse) GetToken() *structpb.Struct {
 	return nil
 }
 
+type RefreshConnectionRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	ConnectionId  string                 `protobuf:"bytes,1,opt,name=connection_id,json=connectionId,proto3" json:"connection_id,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *RefreshConnectionRequest) Reset() {
+	*x = RefreshConnectionRequest{}
+	mi := &file_api_proto_oha_v1_oha_proto_msgTypes[6]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *RefreshConnectionRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*RefreshConnectionRequest) ProtoMessage() {}
+
+func (x *RefreshConnectionRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_oha_v1_oha_proto_msgTypes[6]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use RefreshConnectionRequest.ProtoReflect.Descriptor instead.
+func (*RefreshConnectionRequest) Descriptor() ([]byte, []int) {
+	return file_api_proto_oha_v1_oha_proto_rawDescGZIP(), []int{6}
+}
+
+func (x *RefreshConnectionRequest) GetConnectionId() string {
+	if x != nil {
+		return x.ConnectionId
+	}
+	return ""
+}
+
+type RefreshConnectionResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Token         *structpb.Struct       `protobuf:"bytes,1,opt,name=token,proto3" json:"token,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *RefreshConnectionResponse) Reset() {
+	*x = RefreshConnectionResponse{}
+	mi := &file_api_proto_oha_v1_oha_proto_msgTypes[7]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *RefreshConnectionResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*RefreshConnectionResponse) ProtoMessage() {}
+
+func (x *RefreshConnectionResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_oha_v1_oha_proto_msgTypes[7]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use RefreshConnectionResponse.ProtoReflect.Descriptor instead.
+func (*RefreshConnectionResponse) Descriptor() ([]byte, []int) {
+	return file_api_proto_oha_v1_oha_proto_rawDescGZIP(), []int{7}
+}
+
+func (x *RefreshConnectionResponse) GetToken() *structpb.Struct {
+	if x != nil {
+		return x.Token
+	}
+	return nil
+}
+
 var File_api_proto_oha_v1_oha_proto protoreflect.FileDescriptor
 
 const file_api_proto_oha_v1_oha_proto_rawDesc = "" +
@@ -387,12 +475,17 @@ const file_api_proto_oha_v1_oha_proto_rawDesc = "" +
 	"\x0fGetTokenRequest\x12#\n" +
 	"\rconnection_id\x18\x01 \x01(\tR\fconnectionId\"A\n" +
 	"\x10GetTokenResponse\x12-\n" +
-	"\x05token\x18\x01 \x01(\v2\x17.google.protobuf.StructR\x05token2\xee\x02\n" +
+	"\x05token\x18\x01 \x01(\v2\x17.google.protobuf.StructR\x05token\"?\n" +
+	"\x18RefreshConnectionRequest\x12#\n" +
+	"\rconnection_id\x18\x01 \x01(\tR\fconnectionId\"J\n" +
+	"\x19RefreshConnectionResponse\x12-\n" +
+	"\x05token\x18\x01 \x01(\v2\x17.google.protobuf.StructR\x05token2\xed\x03\n" +
 	"\n" +
 	"OHAService\x12{\n" +
 	"\x11RequestConnection\x12 .oha.v1.RequestConnectionRequest\x1a!.oha.v1.RequestConnectionResponse\"!\x82\xd3\xe4\x93\x02\x1b:\x01*\"\x16/v1/request-connection\x12\x80\x01\n" +
 	"\x0fCheckConnection\x12\x1e.oha.v1.CheckConnectionRequest\x1a\x1f.oha.v1.CheckConnectionResponse\",\x82\xd3\xe4\x93\x02&\x12$/v1/check-connection/{connection_id}\x12`\n" +
-	"\bGetToken\x12\x17.oha.v1.GetTokenRequest\x1a\x18.oha.v1.GetTokenResponse\"!\x82\xd3\xe4\x93\x02\x1b\x12\x19/v1/token/{connection_id}B\x83\x01\n" +
+	"\bGetToken\x12\x17.oha.v1.GetTokenRequest\x1a\x18.oha.v1.GetTokenResponse\"!\x82\xd3\xe4\x93\x02\x1b\x12\x19/v1/token/{connection_id}\x12}\n" +
+	"\x11RefreshConnection\x12 .oha.v1.RefreshConnectionRequest\x1a!.oha.v1.RefreshConnectionResponse\"#\x82\xd3\xe4\x93\x02\x1d\"\x1b/v1/refresh/{connection_id}B\x83\x01\n" +
 	"\n" +
 	"com.oha.v1B\bOhaProtoP\x01Z2dromos-oauth-gateway/gen/go/api/proto/oha/v1;ohapb\xa2\x02\x03OXX\xaa\x02\x06Oha.V1\xca\x02\x06Oha\\V1\xe2\x02\x12Oha\\V1\\GPBMetadata\xea\x02\aOha::V1b\x06proto3"
 
@@ -408,7 +501,7 @@ func file_api_proto_oha_v1_oha_proto_rawDescGZIP() []byte {
 	return file_api_proto_oha_v1_oha_proto_rawDescData
 }
 
-var file_api_proto_oha_v1_oha_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_api_proto_oha_v1_oha_proto_msgTypes = make([]protoimpl.MessageInfo, 8)
 var file_api_proto_oha_v1_oha_proto_goTypes = []any{
 	(*RequestConnectionRequest)(nil),  // 0: oha.v1.RequestConnectionRequest
 	(*RequestConnectionResponse)(nil), // 1: oha.v1.RequestConnectionResponse
@@ -416,21 +509,26 @@ var file_api_proto_oha_v1_oha_proto_goTypes = []any{
 	(*CheckConnectionResponse)(nil),   // 3: oha.v1.CheckConnectionResponse
 	(*GetTokenRequest)(nil),           // 4: oha.v1.GetTokenRequest
 	(*GetTokenResponse)(nil),          // 5: oha.v1.GetTokenResponse
-	(*structpb.Struct)(nil),           // 6: google.protobuf.Struct
+	(*RefreshConnectionRequest)(nil),  // 6: oha.v1.RefreshConnectionRequest
+	(*RefreshConnectionResponse)(nil), // 7: oha.v1.RefreshConnectionResponse
+	(*structpb.Struct)(nil),           // 8: google.protobuf.Struct
 }
 var file_api_proto_oha_v1_oha_proto_depIdxs = []int32{
-	6, // 0: oha.v1.GetTokenResponse.token:type_name -> google.protobuf.Struct
-	0, // 1: oha.v1.OHAService.RequestConnection:input_type -> oha.v1.RequestConnectionRequest
-	2, // 2: oha.v1.OHAService.CheckConnection:input_type -> oha.v1.CheckConnectionRequest
-	4, // 3: oha.v1.OHAService.GetToken:input_type -> oha.v1.GetTokenRequest
-	1, // 4: oha.v1.OHAService.RequestConnection:output_type -> oha.v1.RequestConnectionResponse
-	3, // 5: oha.v1.OHAService.CheckConnection:output_type -> oha.v1.CheckConnectionResponse
-	5, // 6: oha.v1.OHAService.GetToken:output_type -> oha.v1.GetTokenResponse
-	4, // [4:7] is the sub-list for method output_type
-	1, // [1:4] is the sub-list for method input_type
-	1, // [1:1] is the sub-list for extension type_name
-	1, // [1:1] is the sub-list for extension extendee
-	0, // [0:1] is the sub-list for field type_name
+	8, // 0: oha.v1.GetTokenResponse.token:type_name -> google.protobuf.Struct
+	8, // 1: oha.v1.RefreshConnectionResponse.token:type_name -> google.protobuf.Struct
+	0, // 2: oha.v1.OHAService.RequestConnection:input_type -> oha.v1.RequestConnectionRequest
+	2, // 3: oha.v1.OHAService.CheckConnection:input_type -> oha.v1.CheckConnectionRequest
+	4, // 4: oha.v1.OHAService.GetToken:input_type -> oha.v1.GetTokenRequest
+	6, // 5: oha.v1.OHAService.RefreshConnection:input_type -> oha.v1.RefreshConnectionRequest
+	1, // 6: oha.v1.OHAService.RequestConnection:output_type -> oha.v1.RequestConnectionResponse
+	3, // 7: oha.v1.OHAService.CheckConnection:output_type -> oha.v1.CheckConnectionResponse
+	5, // 8: oha.v1.OHAService.GetToken:output_type -> oha.v1.GetTokenResponse
+	7, // 9: oha.v1.OHAService.RefreshConnection:output_type -> oha.v1.RefreshConnectionResponse
+	6, // [6:10] is the sub-list for method output_type
+	2, // [2:6] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
 }
 
 func init() { file_api_proto_oha_v1_oha_proto_init() }
@@ -444,7 +542,7 @@ func file_api_proto_oha_v1_oha_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_proto_oha_v1_oha_proto_rawDesc), len(file_api_proto_oha_v1_oha_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   6,
+			NumMessages:   8,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
