# dromos-oauth-gateway/gen/go/api/proto/oha/v1/oha_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.5.1
+// - protoc-gen-go-grpc v1.6.0
 // - protoc             (unknown)
 // source: api/proto/oha/v1/oha.proto
 
@@ -22,6 +22,7 @@ const (
 	OHAService_RequestConnection_FullMethodName = "/oha.v1.OHAService/RequestConnection"
 	OHAService_CheckConnection_FullMethodName   = "/oha.v1.OHAService/CheckConnection"
 	OHAService_GetToken_FullMethodName          = "/oha.v1.OHAService/GetToken"
+	OHAService_RefreshConnection_FullMethodName = "/oha.v1.OHAService/RefreshConnection"
 )
 
 // OHAServiceClient is the client API for OHAService service.
@@ -31,6 +32,7 @@ type OHAServiceClient interface {
 	RequestConnection(ctx context.Context, in *RequestConnectionRequest, opts ...grpc.CallOption) (*RequestConnectionResponse, error)
 	CheckConnection(ctx context.Context, in *CheckConnectionRequest, opts ...grpc.CallOption) (*CheckConnectionResponse, error)
 	GetToken(ctx context.Context, in *GetTokenRequest, opts ...grpc.CallOption) (*GetTokenResponse, error)
+	RefreshConnection(ctx context.Context, in *RefreshConnectionRequest, opts ...grpc.CallOption) (*RefreshConnectionResponse, error)
 }
 
 type oHAServiceClient struct {
@@ -71,6 +73,16 @@ func (c *oHAServiceClient) GetToken(ctx context.Context, in *GetTokenRequest, op
 	return out, nil
 }
 
+func (c *oHAServiceClient) RefreshConnection(ctx context.Context, in *RefreshConnectionRequest, opts ...grpc.CallOption) (*RefreshConnectionResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(RefreshConnectionResponse)
+	err := c.cc.Invoke(ctx, OHAService_RefreshConnection_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // OHAServiceServer is the server API for OHAService service.
 // All implementations must embed UnimplementedOHAServiceServer
 // for forward compatibility.
@@ -78,6 +90,7 @@ type OHAServiceServer interface {
 	RequestConnection(context.Context, *RequestConnectionRequest) (*RequestConnectionResponse, error)
 	CheckConnection(context.Context, *CheckConnectionRequest) (*CheckConnectionResponse, error)
 	GetToken(context.Context, *GetTokenRequest) (*GetTokenResponse, error)
+	RefreshConnection(context.Context, *RefreshConnectionRequest) (*RefreshConnectionResponse, error)
 	mustEmbedUnimplementedOHAServiceServer()
 }
 
@@ -89,13 +102,16 @@ type OHAServiceServer interface {
 type UnimplementedOHAServiceServer struct{}
 
 func (UnimplementedOHAServiceServer) RequestConnection(context.Context, *RequestConnectionRequest) (*RequestConnectionResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method RequestConnection not implemented")
+	return nil, status.Error(codes.Unimplemented, "method RequestConnection not implemented")
 }
 func (UnimplementedOHAServiceServer) CheckConnection(context.Context, *CheckConnectionRequest) (*CheckConnectionResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method CheckConnection not implemented")
+	return nil, status.Error(codes.Unimplemented, "method CheckConnection not implemented")
 }
 func (UnimplementedOHAServiceServer) GetToken(context.Context, *GetTokenRequest) (*GetTokenResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method GetToken not implemented")
+	return nil, status.Error(codes.Unimplemented, "method GetToken not implemented")
+}
+func (UnimplementedOHAServiceServer) RefreshConnection(context.Context, *RefreshConnectionRequest) (*RefreshConnectionResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method RefreshConnection not implemented")
 }
 func (UnimplementedOHAServiceServer) mustEmbedUnimplementedOHAServiceServer() {}
 func (UnimplementedOHAServiceServer) testEmbeddedByValue()                    {}
@@ -108,7 +124,7 @@ type UnsafeOHAServiceServer interface {
 }
 
 func RegisterOHAServiceServer(s grpc.ServiceRegistrar, srv OHAServiceServer) {
-	// If the following call pancis, it indicates UnimplementedOHAServiceServer was
+	// If the following call panics, it indicates UnimplementedOHAServiceServer was
 	// embedded by pointer and is nil.  This will cause panics if an
 	// unimplemented method is ever invoked, so we test this at initialization
 	// time to prevent it from happening at runtime later due to I/O.
@@ -172,6 +188,24 @@ func _OHAService_GetToken_Handler(srv interface{}, ctx context.Context, dec func
 	return interceptor(ctx, in, info, handler)
 }
 
+func _OHAService_RefreshConnection_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(RefreshConnectionRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(OHAServiceServer).RefreshConnection(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: OHAService_RefreshConnection_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(OHAServiceServer).RefreshConnection(ctx, req.(*RefreshConnectionRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // OHAService_ServiceDesc is the grpc.ServiceDesc for OHAService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -190,6 +224,10 @@ var OHAService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetToken",
 			Handler:    _OHAService_GetToken_Handler,
+		},
+		{
+			MethodName: "RefreshConnection",
+			Handler:    _OHAService_RefreshConnection_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
